--- a/css/estilo.css
+++ b/css/estilo.css
@@ -32,6 +32,10 @@ body{
     padding: 20px 0;
     color: #fff;
 }
+.contenedor-header img {
+    width: 150px; /* Tamaño más pequeño, ajusta según necesites */
+    float: left; /* Alineación a la izquierda */
+}
 .txtRojo{
     color:#ff1133;
 }
@@ -205,7 +209,7 @@ body{
     position: relative;
 }
 .servicios .contenido-seccion{
-    background:linear-gradient( rgba(0, 14, 41, 0.6), rgba(0, 7, 78, 0.7)),url(/img/fondo-servicios.jpg);
+    background:linear-gradient( rgba(0, 0, 0, 0.6), rgba(53, 7, 7, 0.7)),url(/img/fondo-servicios.jpg);
     background-size: cover;
     background-position: center center;
     margin: auto;
@@ -342,7 +346,7 @@ body{
 /* ********** */
 .galeria{
     color: #fff;
-    background:linear-gradient( rgba(0, 14, 41, 0.6), rgba(0, 7, 78, 0.7)),url(/img/fondo-galeria.jpg);
+    background:linear-gradient( rgba(0, 0, 0, 0.6), rgba(53, 7, 7, 0.7)),url(/img/fondo-galeria.jpg);
     background-size: cover;
     background-position: center center;
     padding: 100px 0;
@@ -445,7 +449,7 @@ body{
 /* *********** */
 .contacto{
     color: #fff;
-    background:linear-gradient( rgba(0, 14, 41, 0.6), rgba(0, 7, 78, 0.7)),url(/img/fondo.jpg);
+    background:linear-gradient( rgba(0, 0, 0, 0.6), rgba(53, 7, 7, 0.7)),url(/img/fondo.jpg);
     background-size: cover;
     background-position: center center;
     padding: 100px 20px;
